# pypi2aur

./: .SRCINFO  PKGBUILD  README.md  pyproject.toml
.github/: copilot-instructions.md
src/pypi2aur/: __init__.py  click.py  constants.py  kernel.py  util.py
src/pypi_aur/: __init__.py  click.py  kernel.py
