[project]
name            = "pypi-aur"
version         = "0.1.0"
description     = "PyPi to AUR package generator helper."
readme          = "README.md"
authors         = [{ name = "Antrax", email = "fredcox@gmail.com" }]
requires-python = ">=3.13"
dependencies    = [
    "pypi-simple>=1.6.1",
    "rich>=14.0.0",
]

[project.scripts]
pypi-aur = "pypi_aur:main"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
